--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,12 +7,14 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="17" />
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" android:name="app">
         <activity
             android:name="com.siemens.e.hackathonmcp.MainActivity"
             android:label="@string/app_name" >
