--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,10 +14,11 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" android:name="app">
+        android:theme="@style/AppTheme" android:name="app"
+        >
         <activity
             android:name="com.siemens.e.hackathonmcp.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
